--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Camden.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 			<!-- application libs -->
 			<dependency>
 				<groupId>self.louis.spring.cloud.samples</groupId>
