--- a/service-a/src/main/resources/application.properties
+++ b/service-a/src/main/resources/application.properties
@@ -53,4 +53,4 @@ mybatis.mapper-locations=classpath:self/spring/cloud/sample/dao/sqlmap/*.xml
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
-pagehelper.params=count=countSql
+pagehelper.params=count=countSql;pageNum=offset;pageSize=limit;
