--- a/service-a/src/main/resources/application.properties
+++ b/service-a/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.redis.pool.maxTotal=200
 # 主数据源，默认的
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.01:3306/crm?useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.01:8066/TESTDB?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=rootroot
 
@@ -32,7 +32,7 @@ spring.datasource.maxWait=60000
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 # 配置一个连接在池中最小生存的时间，单位是毫秒
 spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.validationQuery=SELECT 1 FROM employee
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
