shadow test success

--- a/service-a/src/main/resources/application.properties
+++ b/service-a/src/main/resources/application.properties
@@ -48,6 +48,7 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 
 mybatis.type-aliases-package=self.spring.cloud.sample.dao.model
 mybatis.mapper-locations=classpath:self/spring/cloud/sample/dao/sqlmap/*.xml
+#mybatis.config-location=classpath:mybatis-config.xml
 #pagehelper
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
