--- a/service-a/pom.xml
+++ b/service-a/pom.xml
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.1.1</version>
+			<version>1.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -55,6 +55,14 @@
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 			<version>1.1.2</version>
+			<!-- <exclusions>
+				<exclusion>
+					<groupId>com.github.pagehelper</groupId>
+					<artifactId>
+						pagehelper-spring-boot-autoconfigure
+					</artifactId>
+				</exclusion>
+			</exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
