--- a/service-a/src/main/resources/application.properties
+++ b/service-a/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.redis.pool.maxTotal=200
 # 主数据源，默认的
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.01:8066/TESTDB?useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.01:3306/db1?useSSL=false
+#spring.datasource.url=jdbc:mysql://127.0.01:3066/TESTDB?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=rootroot
 
